src/antlr/finalProjectParser.java
package antlr;

// Generated from /media/F/compiler/test/FinalProject/finalProject.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class finalProjectParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INTEGER=1, REAL=2, BOOLEAN=3, OF=4, ARRAY=5, START=6, END=7, DECLARE=8, 
		MODULE=9, DRIVER=10, PROGRAM=11, GET_VALUE=12, PRINT=13, USE=14, WITH=15, 
		PARAMETERS=16, TRUE=17, FALSE=18, TAKES=19, INPUT=20, RETURNS=21, AND=22, 
		OR=23, FOR=24, IN=25, SWITCH=26, CASE=27, BREAK=28, DEFAULT=29, WHILE=30, 
		PLUSE=31, MINUS=32, MUL=33, DIV=34, LT=35, LE=36, GE=37, GT=38, EQ=39, 
		NE=40, DEF=41, ENDDEF=42, COLON=43, RANGEOP=44, SEMICOL=45, COMMA=46, 
		ASSIGNOP=47, SQBO=48, SQBC=49, BO=50, BC=51, COMMENTMAR=52, WHITESPACE=53, 
		ID=54, NUM=55, RNUM=56;
	public static final int
		RULE_program = 0, RULE_moduleDeclarations = 1, RULE_moduleDeclaration = 2, 
		RULE_otherModules = 3, RULE_driverModule = 4, RULE_module = 5, RULE_ret = 6, 
		RULE_input_plist = 7, RULE_output_plist = 8, RULE_dataType = 9, RULE_type = 10, 
		RULE_moduleDef = 11, RULE_statements = 12, RULE_statement = 13, RULE_ioStmt = 14, 
		RULE_var = 15, RULE_whichId = 16, RULE_simpleStmt = 17, RULE_assignmentStmt = 18, 
		RULE_whichStmt = 19, RULE_lvalueIDStmt = 20, RULE_lvalueARRStmt = 21, 
		RULE_index = 22, RULE_moduleReuseStmt = 23, RULE_optional = 24, RULE_idList = 25, 
		RULE_expression = 26, RULE_arithmeticExpr = 27, RULE_term = 28, RULE_factor = 29, 
		RULE_op = 30, RULE_booleanExpr = 31, RULE_logicalOp = 32, RULE_relationalOp = 33, 
		RULE_declareStmt = 34, RULE_conditionalStmt = 35, RULE_caseStmt = 36, 
		RULE_value = 37, RULE_myDefault = 38, RULE_iterativeStmt = 39, RULE_range = 40;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "moduleDeclarations", "moduleDeclaration", "otherModules", 
			"driverModule", "module", "ret", "input_plist", "output_plist", "dataType", 
			"type", "moduleDef", "statements", "statement", "ioStmt", "var", "whichId", 
			"simpleStmt", "assignmentStmt", "whichStmt", "lvalueIDStmt", "lvalueARRStmt", 
			"index", "moduleReuseStmt", "optional", "idList", "expression", "arithmeticExpr", 
			"term", "factor", "op", "booleanExpr", "logicalOp", "relationalOp", "declareStmt", 
			"conditionalStmt", "caseStmt", "value", "myDefault", "iterativeStmt", 
			"range"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'integer'", "'real'", "'boolean'", "'of'", "'array'", "'start'", 
			"'end'", "'declare'", "'module'", "'driver'", "'program'", "'get_value'", 
			"'print'", "'use'", "'with'", "'parameters'", "'true'", "'false'", "'takes'", 
			"'input'", "'returns'", "'and'", "'or'", "'for'", "'in'", "'switch'", 
			"'case'", "'break'", "'default'", "'while'", "'+'", "'-'", "'*'", "'/'", 
			"'<'", "'<='", "'>='", "'>'", "'=='", "'!='", "'<<'", "'>>'", "':'", 
			"'..'", "';'", "','", "':='", "'['", "']'", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INTEGER", "REAL", "BOOLEAN", "OF", "ARRAY", "START", "END", "DECLARE", 
			"MODULE", "DRIVER", "PROGRAM", "GET_VALUE", "PRINT", "USE", "WITH", "PARAMETERS", 
			"TRUE", "FALSE", "TAKES", "INPUT", "RETURNS", "AND", "OR", "FOR", "IN", 
			"SWITCH", "CASE", "BREAK", "DEFAULT", "WHILE", "PLUSE", "MINUS", "MUL", 
			"DIV", "LT", "LE", "GE", "GT", "EQ", "NE", "DEF", "ENDDEF", "COLON", 
			"RANGEOP", "SEMICOL", "COMMA", "ASSIGNOP", "SQBO", "SQBC", "BO", "BC", 
			"COMMENTMAR", "WHITESPACE", "ID", "NUM", "RNUM"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "finalProject.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public finalProjectParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ModuleDeclarationsContext moduleDeclarations() {
			return getRuleContext(ModuleDeclarationsContext.class,0);
		}
		public List<OtherModulesContext> otherModules() {
			return getRuleContexts(OtherModulesContext.class);
		}
		public OtherModulesContext otherModules(int i) {
			return getRuleContext(OtherModulesContext.class,i);
		}
		public DriverModuleContext driverModule() {
			return getRuleContext(DriverModuleContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof finalProjectVisitor ) return ((finalProjectVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			moduleDeclarations();
			setState(83);
			otherModules();
			setState(84);
			driverModule();
			setState(85);
			otherModules();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleDeclarationsContext extends ParserRuleContext {
		public ModuleDeclarationContext moduleDeclaration() {
			return getRuleContext(ModuleDeclarationContext.class,0);
		}
		public ModuleDeclarationsContext moduleDeclarations() {
			return getRuleContext(ModuleDeclarationsContext.class,0);
		}
		public ModuleDeclarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleDeclarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).enterModuleDeclarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).exitModuleDeclarations(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof finalProjectVisitor ) return ((finalProjectVisitor<? extends T>)visitor).visitModuleDeclarations(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleDeclarationsContext moduleDeclarations() throws RecognitionException {
		ModuleDeclarationsContext _localctx = new ModuleDeclarationsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_moduleDeclarations);
		try {
			setState(91);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DECLARE:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				moduleDeclaration();
				setState(88);
				moduleDeclarations();
				}
				break;
			case DEF:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleDeclarationContext extends ParserRuleContext {
		public TerminalNode DECLARE() { return getToken(finalProjectParser.DECLARE, 0); }
		public TerminalNode MODULE() { return getToken(finalProjectParser.MODULE, 0); }
		public TerminalNode ID() { return getToken(finalProjectParser.ID, 0); }
		public TerminalNode SEMICOL() { return getToken(finalProjectParser.SEMICOL, 0); }
		public ModuleDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moduleDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).enterModuleDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).exitModuleDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof finalProjectVisitor ) return ((finalProjectVisitor<? extends T>)visitor).visitModuleDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleDeclarationContext moduleDeclaration() throws RecognitionException {
		ModuleDeclarationContext _localctx = new ModuleDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_moduleDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(DECLARE);
			setState(94);
			match(MODULE);
			setState(95);
			match(ID);
			setState(96);
			match(SEMICOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OtherModulesContext extends ParserRuleContext {
		public ModuleContext module() {
			return getRuleContext(ModuleContext.class,0);
		}
		public OtherModulesContext otherModules() {
			return getRuleContext(OtherModulesContext.class,0);
		}
		public OtherModulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_otherModules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).enterOtherModules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).exitOtherModules(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof finalProjectVisitor ) return ((finalProjectVisitor<? extends T>)visitor).visitOtherModules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OtherModulesContext otherModules() throws RecognitionException {
		OtherModulesContext _localctx = new OtherModulesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_otherModules);
		try {
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				module();
				setState(99);
				otherModules();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DriverModuleContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(finalProjectParser.DEF, 0); }
		public TerminalNode DRIVER() { return getToken(finalProjectParser.DRIVER, 0); }
		public TerminalNode PROGRAM() { return getToken(finalProjectParser.PROGRAM, 0); }
		public TerminalNode ENDDEF() { return getToken(finalProjectParser.ENDDEF, 0); }
		public ModuleDefContext moduleDef() {
			return getRuleContext(ModuleDefContext.class,0);
		}
		public DriverModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_driverModule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).enterDriverModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).exitDriverModule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof finalProjectVisitor ) return ((finalProjectVisitor<? extends T>)visitor).visitDriverModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DriverModuleContext driverModule() throws RecognitionException {
		DriverModuleContext _localctx = new DriverModuleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_driverModule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(DEF);
			setState(105);
			match(DRIVER);
			setState(106);
			match(PROGRAM);
			setState(107);
			match(ENDDEF);
			setState(108);
			moduleDef();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(finalProjectParser.DEF, 0); }
		public TerminalNode MODULE() { return getToken(finalProjectParser.MODULE, 0); }
		public TerminalNode ID() { return getToken(finalProjectParser.ID, 0); }
		public TerminalNode ENDDEF() { return getToken(finalProjectParser.ENDDEF, 0); }
		public TerminalNode TAKES() { return getToken(finalProjectParser.TAKES, 0); }
		public TerminalNode INPUT() { return getToken(finalProjectParser.INPUT, 0); }
		public TerminalNode SQBO() { return getToken(finalProjectParser.SQBO, 0); }
		public Input_plistContext input_plist() {
			return getRuleContext(Input_plistContext.class,0);
		}
		public TerminalNode SQBC() { return getToken(finalProjectParser.SQBC, 0); }
		public TerminalNode SEMICOL() { return getToken(finalProjectParser.SEMICOL, 0); }
		public RetContext ret() {
			return getRuleContext(RetContext.class,0);
		}
		public ModuleDefContext moduleDef() {
			return getRuleContext(ModuleDefContext.class,0);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).exitModule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof finalProjectVisitor ) return ((finalProjectVisitor<? extends T>)visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_module);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(DEF);
			setState(111);
			match(MODULE);
			setState(112);
			match(ID);
			setState(113);
			match(ENDDEF);
			setState(114);
			match(TAKES);
			setState(115);
			match(INPUT);
			setState(116);
			match(SQBO);
			setState(117);
			input_plist(0);
			setState(118);
			match(SQBC);
			setState(119);
			match(SEMICOL);
			setState(120);
			ret();
			setState(121);
			moduleDef();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RetContext extends ParserRuleContext {
		public TerminalNode RETURNS() { return getToken(finalProjectParser.RETURNS, 0); }
		public TerminalNode SQBO() { return getToken(finalProjectParser.SQBO, 0); }
		public Output_plistContext output_plist() {
			return getRuleContext(Output_plistContext.class,0);
		}
		public TerminalNode SQBC() { return getToken(finalProjectParser.SQBC, 0); }
		public TerminalNode SEMICOL() { return getToken(finalProjectParser.SEMICOL, 0); }
		public RetContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ret; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).enterRet(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).exitRet(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof finalProjectVisitor ) return ((finalProjectVisitor<? extends T>)visitor).visitRet(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RetContext ret() throws RecognitionException {
		RetContext _localctx = new RetContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ret);
		try {
			setState(130);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RETURNS:
				enterOuterAlt(_localctx, 1);
				{
				setState(123);
				match(RETURNS);
				setState(124);
				match(SQBO);
				setState(125);
				output_plist(0);
				setState(126);
				match(SQBC);
				setState(127);
				match(SEMICOL);
				}
				break;
			case START:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Input_plistContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(finalProjectParser.ID, 0); }
		public TerminalNode COLON() { return getToken(finalProjectParser.COLON, 0); }
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public Input_plistContext input_plist() {
			return getRuleContext(Input_plistContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(finalProjectParser.COMMA, 0); }
		public Input_plistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input_plist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).enterInput_plist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).exitInput_plist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof finalProjectVisitor ) return ((finalProjectVisitor<? extends T>)visitor).visitInput_plist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Input_plistContext input_plist() throws RecognitionException {
		return input_plist(0);
	}

	private Input_plistContext input_plist(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Input_plistContext _localctx = new Input_plistContext(_ctx, _parentState);
		Input_plistContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_input_plist, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(133);
			match(ID);
			setState(134);
			match(COLON);
			setState(135);
			dataType();
			}
			_ctx.stop = _input.LT(-1);
			setState(144);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Input_plistContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_input_plist);
					setState(137);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(138);
					match(COMMA);
					setState(139);
					match(ID);
					setState(140);
					match(COLON);
					setState(141);
					dataType();
					}
					} 
				}
				setState(146);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Output_plistContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(finalProjectParser.ID, 0); }
		public TerminalNode COLON() { return getToken(finalProjectParser.COLON, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public Output_plistContext output_plist() {
			return getRuleContext(Output_plistContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(finalProjectParser.COMMA, 0); }
		public DataTypeContext dataType() {
			return getRuleContext(DataTypeContext.class,0);
		}
		public Output_plistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_output_plist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).enterOutput_plist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).exitOutput_plist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof finalProjectVisitor ) return ((finalProjectVisitor<? extends T>)visitor).visitOutput_plist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Output_plistContext output_plist() throws RecognitionException {
		return output_plist(0);
	}

	private Output_plistContext output_plist(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Output_plistContext _localctx = new Output_plistContext(_ctx, _parentState);
		Output_plistContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_output_plist, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(148);
			match(ID);
			setState(149);
			match(COLON);
			setState(150);
			type();
			}
			_ctx.stop = _input.LT(-1);
			setState(159);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Output_plistContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_output_plist);
					setState(152);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(153);
					match(COMMA);
					setState(154);
					match(ID);
					setState(155);
					match(COLON);
					setState(156);
					dataType();
					}
					} 
				}
				setState(161);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class DataTypeContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(finalProjectParser.INTEGER, 0); }
		public TerminalNode REAL() { return getToken(finalProjectParser.REAL, 0); }
		public TerminalNode BOOLEAN() { return getToken(finalProjectParser.BOOLEAN, 0); }
		public TerminalNode ARRAY() { return getToken(finalProjectParser.ARRAY, 0); }
		public TerminalNode SQBO() { return getToken(finalProjectParser.SQBO, 0); }
		public RangeContext range() {
			return getRuleContext(RangeContext.class,0);
		}
		public TerminalNode SQBC() { return getToken(finalProjectParser.SQBC, 0); }
		public TerminalNode OF() { return getToken(finalProjectParser.OF, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public DataTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).enterDataType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof finalProjectListener ) ((finalProjectListener)listener).exitDataType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof finalProjectVisitor ) return ((finalProjectVisitor<? extends T>)visitor).visitDataType(this);
			else return visitor.visitChildren(this);
		}
	}
